@@ -14,6 +14,7 @@
  */
 package org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods.engine;
 
+import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
@@ -21,11 +22,13 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import org.hyperledger.besu.consensus.merge.PayloadWrapper;
 import org.hyperledger.besu.consensus.merge.blockcreation.PayloadIdentifier;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.BlobGas;
 import org.hyperledger.besu.datatypes.BlobsWithCommitments;
 import org.hyperledger.besu.datatypes.Hash;
+import org.hyperledger.besu.datatypes.RequestType;
 import org.hyperledger.besu.datatypes.TransactionType;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.ethereum.api.jsonrpc.RpcMethod;
@@ -40,12 +43,13 @@ import org.hyperledger.besu.ethereum.core.BlockBody;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
 import org.hyperledger.besu.ethereum.core.BlockHeaderTestFixture;
 import org.hyperledger.besu.ethereum.core.BlockWithReceipts;
+import org.hyperledger.besu.ethereum.core.Request;
 import org.hyperledger.besu.ethereum.core.Transaction;
 import org.hyperledger.besu.ethereum.core.TransactionReceipt;
 import org.hyperledger.besu.ethereum.core.TransactionTestFixture;
 
 import java.math.BigInteger;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 
@@ -70,8 +74,8 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
   public void before() {
     super.before();
     lenient()
-        .when(mergeContext.retrieveBlockById(mockPid))
-        .thenReturn(Optional.of(mockBlockWithReceiptsAndDeposits));
+        .when(mergeContext.retrievePayloadById(mockPid))
+        .thenReturn(Optional.of(mockPayloadWithDepositRequests));
     when(protocolContext.safeConsensusContext(Mockito.any())).thenReturn(Optional.of(mergeContext));
     this.method =
         new EngineGetPayloadV4(
@@ -127,19 +131,24 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
     BlockWithReceipts block =
         new BlockWithReceipts(
             new Block(
-                header,
-                new BlockBody(
-                    List.of(blobTx),
-                    Collections.emptyList(),
-                    Optional.of(Collections.emptyList()),
-                    Optional.of(Collections.emptyList()),
-                    Optional.of(Collections.emptyList()))),
+                header, new BlockBody(List.of(blobTx), emptyList(), Optional.of(emptyList()))),
             List.of(blobReceipt));
+    final List<Request> requests =
+        List.of(
+            new Request(RequestType.DEPOSIT, Bytes.of(1)),
+            new Request(RequestType.WITHDRAWAL, Bytes.of(1)),
+            new Request(RequestType.CONSOLIDATION, Bytes.of(1)));
+    PayloadWrapper payload = new PayloadWrapper(payloadIdentifier, block, Optional.of(requests));
 
-    when(mergeContext.retrieveBlockById(payloadIdentifier)).thenReturn(Optional.of(block));
+    when(mergeContext.retrievePayloadById(payloadIdentifier)).thenReturn(Optional.of(payload));
 
     final var resp = resp(RpcMethod.ENGINE_GET_PAYLOAD_V4.getMethodName(), payloadIdentifier);
     assertThat(resp).isInstanceOf(JsonRpcSuccessResponse.class);
+    final List<String> requestsWithoutRequestId =
+        requests.stream()
+            .sorted(Comparator.comparing(Request::getType))
+            .map(r -> r.getData().toHexString())
+            .toList();
     Optional.of(resp)
         .map(JsonRpcSuccessResponse.class::cast)
         .ifPresent(
@@ -147,8 +156,6 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
               assertThat(r.getResult()).isInstanceOf(EngineGetPayloadResultV4.class);
               final EngineGetPayloadResultV4 res = (EngineGetPayloadResultV4) r.getResult();
               assertThat(res.getExecutionPayload().getWithdrawals()).isNotNull();
-              assertThat(res.getExecutionPayload().getDeposits()).isNotNull();
-              assertThat(res.getExecutionPayload().getWithdrawalRequests()).isNotNull();
               assertThat(res.getExecutionPayload().getHash())
                   .isEqualTo(header.getHash().toString());
               assertThat(res.getBlockValue()).isEqualTo(Quantity.create(0));
@@ -159,6 +166,8 @@ public class EngineGetPayloadV4Test extends AbstractEngineGetPayloadTest {
               assertThat(res.getExecutionPayload().getExcessBlobGas()).isNotEmpty();
               assertThat(res.getExecutionPayload().getExcessBlobGas())
                   .isEqualTo(expectedQuantityOf10);
+              assertThat(res.getExecutionRequests()).isNotEmpty();
+              assertThat(res.getExecutionRequests()).isEqualTo(requestsWithoutRequestId);
             });
     verify(engineCallListener, times(1)).executionEngineCalled();
   }
