@@ -15,12 +15,13 @@
 package org.hyperledger.besu.ethereum.trie.diffbased.bonsai;
 
 import static org.hyperledger.besu.ethereum.core.InMemoryKeyValueStorageProvider.createInMemoryBlockchain;
+import static org.hyperledger.besu.ethereum.core.WorldStateHealerHelper.throwingWorldStateHealerSupplier;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import org.hyperledger.besu.config.GenesisAllocation;
+import org.hyperledger.besu.config.GenesisAccount;
 import org.hyperledger.besu.config.GenesisConfigFile;
 import org.hyperledger.besu.crypto.KeyPair;
 import org.hyperledger.besu.crypto.SECPPrivateKey;
@@ -29,6 +30,7 @@ import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Hash;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.ethereum.BlockProcessingResult;
+import org.hyperledger.besu.ethereum.ConsensusContext;
 import org.hyperledger.besu.ethereum.ProtocolContext;
 import org.hyperledger.besu.ethereum.blockcreation.AbstractBlockCreator;
 import org.hyperledger.besu.ethereum.chain.BadBlockManager;
@@ -39,9 +41,9 @@ import org.hyperledger.besu.ethereum.core.BlockHeader;
 import org.hyperledger.besu.ethereum.core.BlockHeaderBuilder;
 import org.hyperledger.besu.ethereum.core.BlockHeaderTestFixture;
 import org.hyperledger.besu.ethereum.core.Difficulty;
-import org.hyperledger.besu.ethereum.core.ImmutableMiningParameters;
-import org.hyperledger.besu.ethereum.core.ImmutableMiningParameters.MutableInitValues;
-import org.hyperledger.besu.ethereum.core.MiningParameters;
+import org.hyperledger.besu.ethereum.core.ImmutableMiningConfiguration;
+import org.hyperledger.besu.ethereum.core.ImmutableMiningConfiguration.MutableInitValues;
+import org.hyperledger.besu.ethereum.core.MiningConfiguration;
 import org.hyperledger.besu.ethereum.core.MutableWorldState;
 import org.hyperledger.besu.ethereum.core.SealableBlockHeader;
 import org.hyperledger.besu.ethereum.core.Transaction;
@@ -85,7 +87,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.bytes.Bytes32;
@@ -98,15 +99,17 @@ public abstract class AbstractIsolationTests {
   protected ProtocolContext protocolContext;
   protected EthContext ethContext;
   protected EthScheduler ethScheduler = new DeterministicEthScheduler();
-  final Function<String, KeyPair> asKeyPair =
+  final Function<Bytes32, KeyPair> asKeyPair =
       key ->
           SignatureAlgorithmFactory.getInstance()
-              .createKeyPair(SECPPrivateKey.create(Bytes32.fromHexString(key), "ECDSA"));
+              .createKeyPair(SECPPrivateKey.create(key, "ECDSA"));
   protected final ProtocolSchedule protocolSchedule =
       MainnetProtocolSchedule.fromConfig(
           GenesisConfigFile.fromResource("/dev.json").getConfigOptions(),
-          MiningParameters.MINING_DISABLED,
-          new BadBlockManager());
+          MiningConfiguration.MINING_DISABLED,
+          new BadBlockManager(),
+          false,
+          new NoOpMetricsSystem());
   protected final GenesisState genesisState =
       GenesisState.fromConfig(GenesisConfigFile.fromResource("/dev.json"), protocolSchedule);
   protected final MutableBlockchain blockchain = createInMemoryBlockchain(genesisState.getBlock());
@@ -132,19 +135,21 @@ public abstract class AbstractIsolationTests {
           poolConfiguration,
           new GasPricePrioritizedTransactions(
               poolConfiguration,
+              ethScheduler,
               new EndLayer(txPoolMetrics),
               txPoolMetrics,
               transactionReplacementTester,
               new BlobCache(),
-              MiningParameters.newDefault()));
+              MiningConfiguration.newDefault()),
+          ethScheduler);
 
-  protected final List<GenesisAllocation> accounts =
+  protected final List<GenesisAccount> accounts =
       GenesisConfigFile.fromResource("/dev.json")
           .streamAllocations()
-          .filter(ga -> ga.getPrivateKey().isPresent())
-          .collect(Collectors.toList());
+          .filter(ga -> ga.privateKey() != null)
+          .toList();
 
-  KeyPair sender1 = asKeyPair.apply(accounts.get(0).getPrivateKey().get());
+  KeyPair sender1 = Optional.ofNullable(accounts.get(0).privateKey()).map(asKeyPair).orElseThrow();
   TransactionPool transactionPool;
 
   @TempDir private Path tempData;
@@ -164,10 +169,13 @@ public abstract class AbstractIsolationTests {
             Optional.of(16L),
             new BonsaiCachedMerkleTrieLoader(new NoOpMetricsSystem()),
             null,
-            EvmConfiguration.DEFAULT);
+            EvmConfiguration.DEFAULT,
+            throwingWorldStateHealerSupplier());
     var ws = archive.getMutable();
     genesisState.writeStateTo(ws);
-    protocolContext = new ProtocolContext(blockchain, archive, null, new BadBlockManager());
+    protocolContext =
+        new ProtocolContext(
+            blockchain, archive, mock(ConsensusContext.class), new BadBlockManager());
     ethContext = mock(EthContext.class, RETURNS_DEEP_STUBS);
     when(ethContext.getEthPeers().subscribeConnect(any())).thenReturn(1L);
     transactionPool =
@@ -178,7 +186,8 @@ public abstract class AbstractIsolationTests {
             mock(TransactionBroadcaster.class),
             ethContext,
             txPoolMetrics,
-            poolConfiguration);
+            poolConfiguration,
+            new BlobCache());
     transactionPool.setEnabled();
   }
 
@@ -199,6 +208,16 @@ public abstract class AbstractIsolationTests {
             new BesuConfiguration() {
 
               @Override
+              public Optional<String> getRpcHttpHost() {
+                return Optional.empty();
+              }
+
+              @Override
+              public Optional<Integer> getRpcHttpPort() {
+                return Optional.empty();
+              }
+
+              @Override
               public Path getStoragePath() {
                 return tempData.resolve("database");
               }
@@ -215,7 +234,7 @@ public abstract class AbstractIsolationTests {
 
               @Override
               public Wei getMinGasPrice() {
-                return MiningParameters.newDefault().getMinTransactionGasPrice();
+                return MiningConfiguration.newDefault().getMinTransactionGasPrice();
               }
 
               @Override
@@ -240,35 +259,31 @@ public abstract class AbstractIsolationTests {
 
   static class TestBlockCreator extends AbstractBlockCreator {
     private TestBlockCreator(
-        final MiningParameters miningParameters,
+        final MiningConfiguration miningConfiguration,
         final MiningBeneficiaryCalculator miningBeneficiaryCalculator,
         final ExtraDataCalculator extraDataCalculator,
         final TransactionPool transactionPool,
         final ProtocolContext protocolContext,
         final ProtocolSchedule protocolSchedule,
-        final BlockHeader parentHeader,
         final EthScheduler ethScheduler) {
       super(
-          miningParameters,
+          miningConfiguration,
           miningBeneficiaryCalculator,
           extraDataCalculator,
           transactionPool,
           protocolContext,
           protocolSchedule,
-          parentHeader,
-          Optional.empty(),
           ethScheduler);
     }
 
     static TestBlockCreator forHeader(
-        final BlockHeader parentHeader,
         final ProtocolContext protocolContext,
         final ProtocolSchedule protocolSchedule,
         final TransactionPool transactionPool,
         final EthScheduler ethScheduler) {
 
-      final MiningParameters miningParameters =
-          ImmutableMiningParameters.builder()
+      final MiningConfiguration miningConfiguration =
+          ImmutableMiningConfiguration.builder()
               .mutableInitValues(
                   MutableInitValues.builder()
                       .extraData(Bytes.fromHexString("deadbeef"))
@@ -280,13 +295,12 @@ public abstract class AbstractIsolationTests {
               .build();
 
       return new TestBlockCreator(
-          miningParameters,
+          miningConfiguration,
           __ -> Address.ZERO,
           __ -> Bytes.fromHexString("deadbeef"),
           transactionPool,
           protocolContext,
           protocolSchedule,
-          parentHeader,
           ethScheduler);
     }
 
@@ -319,8 +333,8 @@ public abstract class AbstractIsolationTests {
   protected Block forTransactions(
       final List<Transaction> transactions, final BlockHeader forHeader) {
     return TestBlockCreator.forHeader(
-            forHeader, protocolContext, protocolSchedule, transactionPool, ethScheduler)
-        .createBlock(transactions, Collections.emptyList(), System.currentTimeMillis())
+            protocolContext, protocolSchedule, transactionPool, ethScheduler)
+        .createBlock(transactions, Collections.emptyList(), System.currentTimeMillis(), forHeader)
         .getBlock();
   }
 
